# distance_search_app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: test.xlsx
distance_search_app/: app.py
