[tool.poetry]
name = "distance_search_app"
version = "0.1.0"
description = ""
authors = ["keihub <jiayoubentian47@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
